[package]
name = "cut-optimizer-1d-server"
version = "0.1.0"
authors = ["Jason Rodney Hansen <jasonrodneyhansen@gmail.com>"]
repository = "https://github.com/jasonrhansen/cut-optimizer-1d-server.git"
keywords = ["cuts", "optimize", "optimization", "bin-packing", "bin-packer"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
cut-optimizer-1d = { version = "0.1", features = ["serialize"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.2", features = ["full"] }
axum = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.5"
structopt = "0.3"
http = "0.2"

[dev-dependencies]
reqwest = "0.11"
